2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/em.py:

	Added rayleighjeans_wavelength() and planck_wavenumber().

	* typhon/physics/tests/test_physics.py:

	Added tests for newly implemented functions.

2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/__init__.py:

	disable syntax checking for imports using the noqa (no quality assurance)
	directive.

	* typhon/physics/em.py: Fixed bugs (found while writing tests).

	* typhon/physics/tests,
	typhon/physics/tests/test_physics.py:

	Tests for typhon.physics.

2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/cm/tests, typhon/cm/tests/test_cm.py:

	Tests for typhon.cm.

	* typhon/cm/tests/reference,
	typhon/cm/tests/reference/viridis.cpt,
	typhon/cm/tests/reference/viridis.txt:

	Reference data for colormap tests.

	* typhon/arts/xml/tests/test_matpack_types.py:

	Removed print form setUp().

	* typhon/tests/test_latex.py:

	Removed print from setUp().

	Do not try to remove *.bin files in tearDown().

2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/tests/test_arts.py:

	Included optional test case for ARTS system call (only run if ARTS in
	search path).

	* typhon/plots/__init__.py:

	Import typhon.cm.

	Added get_subplot_arrangement() to __all__.

	* typhon/plots/tests,
	typhon/plots/tests/test_plots.py:

	Test all functions in typhon.plots that do not create plots.

2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/tests/test_geographical.py: Tests for typhon.geographical.

	* typhon/tests/test_latex.py: Tests for typhon.latex.

	* typhon/tests/reference,
	typhon/tests/reference/matrix.tex:

	Reference data for unit tests.

2016-10-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/units/em.py(SRF.integrate_radiances):

	- Introduce workaround for numexpr bug when operating reducing
	operation on ndarray along zero dimension (see
	https://github.com/pydata/numexpr/issues/229)

	* typhon/datasets/tovs.py:
	
	(HIRS):
